--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<boringform></boringform>
+<nav>
+    <a routerLink="/">index</a>
+    <a routerLink="/boring-form">Boring form</a>
+    <a routerLink="/biblioteca">biblioteca</a>
+</nav>
+
+<router-outlet></router-outlet>
