--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <a routerLink="/">index</a>
     <a routerLink="/boring-form">Boring form</a>
     <a routerLink="/biblioteca">biblioteca</a>
+    <a routerLink="/animations">Animations</a>
 </nav>
 
 <router-outlet></router-outlet>
